<?xml version="1.0"?>
<package format="2">
  <name>monoped_kinematic_viz</name>
  <version>0.0.1</version>
  <description>
    Monoped kinematic vizualisation using xpp.
  </description>

  <author>Iordanis Chatzinikolaidis</author>
  <maintainer email="ch.iordanis@outlook.com">Iordanis Chatzinikolaidis</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>xpp_vis</depend>
  <depend>xpp_hyq</depend>
</package>
